# emu

./: CMakeLists.txt  README.md  builddebian.sh  buildmac.sh  buildvs12.bat  buildxcode.sh
include/: nitro.h  nitrosdk.h
mame/: whatsnew.txt
mame/src/emu/: attotime.c  driver.h  eigccx86.h  eminline.h  fileio.c  inptport.c  inpttype.h  input.c  input.h  mame.c  mame.h  mamecore.h  render.c  rendlay.c  romload.c  ui.c  uimenu.c  validity.c  video.c
mame/src/emu/layout/: convert.bat  doit.bat  vertical.lh
mame/src/emu/sound/: discrete.c  scsp.c  tms5110.c
mame/src/lib/util/: corefile.c
mame/src/mame/: defendermachine.c  mame.mak  mamedriv.c  tiny.c
mame/src/mame/drivers/: 8080bw.c  cps1.c  cps3.c  megadriv.c  nemesis.c  neodrvr.c  pgm.c  snk6502.c  williams.c
mame/src/mame/video/: cps1.c
mame/src/osd/: osdcomm.h  osdcore.h
mame/src/osd/nitro/: nitroaudio.c  nitroaudio.h  nitrodir.c  nitrofile.c  nitroinput.c  nitroinput.h  nitromain.c  nitrooutput.c  nitrooutput.h  nitrostub.cpp  nitrotrinsics.h  nitrovideo.c  nitrovideo.h  nitrowork.c
mame/src/osd/osdmini/: minidir.c  minimain.c
mame/src/osd/windows/: debugwin.c  drawd3d.c  drawdd.c  input.c  osinline.h  strconv.c  vconv.c.old  video.c  window.c  windows.mak  winfile.c  winmain.c  winmain.h  winutf8.c
mame/src/tools/: unidasm.c
platform/: build.c  new  renderfont.c  renderlayer.c
test/: testmame.cpp
